2005-12-15  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #324058
	* gui/dialogs/comp-editor.c: (key_press_event),
	(editor_key_press_event), (real_send_comp): Removed the 
	obsolete code which caused the crash. Corrected an invalid type
	cast.

2005-12-15  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #321739
	* gui/dialogs/event-page.c: (event_page_fill_widgets),
	(remove_attendee): Add/remove attendee from e-name-selector also.
	* gui/e-meeting-list-view.h:
	* gui/e-meeting-list-view.c: (get_index_from_role),
	(e_meeting_list_view_add_attendee_to_name_selector),
	(e_meeting_list_view_remove_attendee_from_name_selector),
	(attendee_edited_cb), (process_section), (add_to_list),
	(name_selector_dialog_close_cb): Syncronize the adding/removing
	attendees between EMeetingListView and ENameSelector dialog.	

2005-12-15  Srinivasa Ragavan  <sragavan@novell.com>

	* gui/e-calendar-view.c: (e_calendar_view_get_tooltips): Added 
	code to make the tooltips strings translatable. Also picked up
	the color from the theme for the tooltip instead of hardcoded
	colors.

2005-12-09  Johnny Jacob <johnnyjacob@gmail.com>

	* gui/dialogs/event-page.c : 
	(hour_sel_changed) : Added. Event handler for hour_selector
	(minute_sel_changed) : Added. Event handler for minute_selector
	(update_end_time_selector) : Added. Updates hour_selector 
	& minute_selector  
	(hour_minute_changed) : Added. Updates DateEdit based on hour 
	and minute selectors
	(sensitize_widgets) : Handle end_time_selector's sensitivity.
	(get_widgets) : Get minute_selector.
	(init_widgets) : Initialize hour_selector and minute_selector.
	gui/dialogs/event-page.glade : minute_selector GtkSpinButton added.

	* gui/dialogs/event-page.glade: Added the widgets to the glade
	
2005-11-27  Johnny Jacob  <johnnyjacob@gmail.com>

	** Fixes bug #324060

	* gui/dialogs/comp-editor.c (menu_file_close_cb): 
	Check wheather the summary is empty and prompt accordingly,
